fix: fix the overlapping issue between navbar and next-section-button using z-index

--- a/style-files/navbar.css
+++ b/style-files/navbar.css
@@ -16,7 +16,7 @@ body {
   align-items: center;
   border-bottom: 2px solid rgb(103, 129, 208);
   position: fixed;
-  z-index: 1;
+  z-index: 2;
 }
 
 .navbar-logo {
